feature: admin reset data

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,6 +4,8 @@
 </head>
 <body>
 
+isAdmin: {{isAdmin}}
+
 <form action="" method="post">
     <input type="password" placeholder="Password" name="password" value="">
     <input class="btn btn-default" type="submit" value="Login">
